# e2e-messenger

./: .cursorrules  .gitignore  AGENT_SETUP.md  DEBUG.md  PROGRESS.md  README.md  REVIEW.md  SESSION_START.md  TASK_01_project_bootstrap.md  TASK_02_authentication_jwt.md  TASK_03_user_search.md  TASK_04_private_chats.md  TASK_05_e2e_crypto_key_exchange.md  TASK_06_realtime_messaging_ws.md  TASK_07_message_history.md  TASK_08_deploy_and_smoke_test.md  cursorrules.md
backend/: alembic.ini  pyproject.toml
backend/alembic/versions/: 20260509_120000_create_users_table.py
backend/app/: main.py
backend/app/api/v1/: auth.py  users.py
backend/app/core/: security.py
backend/app/models/: user.py
backend/app/schemas/: auth.py  user.py
backend/app/services/: auth_service.py  user_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/api/: auth.ts  users.ts
frontend/src/features/auth/: AuthPanel.tsx
frontend/src/features/user-search/: UserSearchPanel.tsx
infra/: docker-compose.yml
